--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "react-submodules",
   "version": "0.1.0",
-  "homepage":"http://simoe.github.io/react-submodules",
+  "homepage": "http://simoe.github.io/react-submodules",
   "private": true,
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
@@ -11,8 +12,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy":"yarn run build",
-    "deploy":"gh-pages -d build",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
